courses/430_programming-languages/assignment-8/tests/error/error47.correct
token 'var' after logical end of program
